/*
 * UCF COP3330 Fall 2021 Assignment 3 Solutions
 * Copyright 2021 Rafael Alvarez-Romero
 */

/*
pseudocode:
Read File
Parse File into a List of Strings
For each String, separate values into Hashmap based on "," and do next line when at \n
Output each hashmap into a table format
 */

package ex42;

public class app {
    public static void main(String[] args) {
        new employees();
    }
}